Fix 'overflow: visible' warning: overflow controls no longer necessary
    - the handling of seeing images on small viewport can be handled with a row width: max-content property

--- a/src/pages/MyLiquidity/MyLiquidity.scss
+++ b/src/pages/MyLiquidity/MyLiquidity.scss
@@ -183,7 +183,7 @@
       position: relative;
       > .row {
         position: absolute;
-        width: 100vw;
+        width: max-content;
         right: 20%;
         top: 0;
         bottom: 0;
@@ -195,10 +195,6 @@
           margin-left: -2rem; // add icon overlap
           height: 120%;
           width: auto;
-
-          // see icons even when column has shrunken below their size
-          overflow: visible;
-          object-fit: cover;
         }
       }
     }
